--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.jsons">
-    <link rel="shortcut icon" href="../public/assets/icons/favicon.ico">
+    <link rel="icon" href="./favicon.ico" type='image/x-icon'/>
+    <link rel="manifest" href="./manifest.json"/>
     <link rel="apple-touch-icon" href="../public/assets/icons/apple-touch-icon.png" />
 
     <title>Live.ly</title>
