--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,11 +24,12 @@
     }
 }
 
-body {
-  background-size: 400% 400%;
-  /* change left for top or  right, also can change radial for linear  */
-  background: -webkit-repeating-radial-gradient(left, #7a26dd, #e80808);
-  animation: cambia-color 5s linear infinite;
+body { 
+  background: url(./wallpaper.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
     </style>
 <!-- change color part finish here -->
